# LearningOpenGL

./: CMakeLists.txt  README.md  main.cpp  stb_image.h
include/GLFW/: glfw3.h
include/glm/gtc/: matrix_transform.hpp  matrix_transform.inl
shaders/: shader.fs  shader.vs
学习OpenGL之旅/入门/: MVP变换.cpp  创建窗口.cpp  双纹理.cpp  变色矩形.cpp  旋转.cpp  着色器.cpp  矩形.cpp  纹理矩形.cpp
